@@ -2641,3 +2641,7 @@ errorwidget.popupmenu=logs-remove-all-errors
 logs-remove-all-errors.label=Remove all errors
 
 taskmanager.remainingtasks.label={0} remaining task(s)
+killring.load-memoryerror.message=Unable to load previously deleted text. Please increase your memory heap space.\
+  Press Yes to start jEdit anyway, or No to stop and change your settings.
+killring.load-memoryerror.title=Memory error
+
